# silc

./: .gitignore  default.nix  shell.nix
silcc/: default.nix  silcc.cabal
silcc/src/Silcc/: Value.hs
