cabal-version: >= 1.10
build-type: Simple

name: silcc
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Silcc.Value

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        ConstraintKinds,
        DeriveFoldable,
        DeriveFunctor,
        DeriveTraversable,
        DerivingStrategies,
        GADTs,
        OverloadedLists,
        OverloadedStrings,
        StrictData,
        TypeFamilies,
        ViewPatterns

    build-depends:
        base,
        bytestring,
        cereal,
        lens,
        recursion-schemes,
        vector
